# accessibility-automator

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  config.yaml  progress.md  pyproject.toml  render.yaml  requirements.txt  run_server.ps1  run_server.sh
.github/workflows/: ci.yml
ai_specs/: architecture-planning.md  conventions.md  deployment.md  domain-knowledge.md  features.md  llm-integration.md  overview.md
alembic/: env.py
alembic/versions/: 0001_users.py  0002_user_affiliation.py
backend/: __init__.py  cli.py
backend/app/: __init__.py  deps.py  main.py  seed.py  settings.py
backend/app/auth/: __init__.py  azure_oidc.py  base.py  mock.py  models.py  session.py
backend/app/core/: database.py  identity.py  security.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/routes/: __init__.py  auth.py  config.py  files.py  groups.py  jobs.py  reports.py  settings.py  users.py
backend/app/schemas/: models.py  user.py
backend/tests/: conftest.py  test_admin_users.py  test_auth.py  test_remediation_flow.py  test_settings.py  test_workspace.py
docs/: application-user-guide.html  sdd-walkthrough.html
frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/tests/: SignInForm.test.jsx  TopMenu.test.jsx  score.test.js
remediator/: __init__.py  config.py  models.py  pipeline.py  reporter.py  scorer.py
remediator/fixers/: __init__.py  ai_fixer.py  pdf_fixer.py  pptx_fixer.py
remediator/handlers/: __init__.py  base.py  pdf_handler.py  pptx_handler.py
remediator/llm/: __init__.py  prompts.py  provider.py
remediator/rules/: __init__.py  pdf_rules.py  pptx_rules.py
remediator/tests/: conftest.py  test_pdf_fixer.py  test_pdf_rules.py  test_pptx_fixer.py  test_pptx_rules.py  test_scorer.py
testdata/: README.md
(+18 files in other folders)
