[project]
name = "accessibility-automator"
version = "0.1.0"
description = "Remediate faculty PPTX/PDF lecture files against WCAG for Canvas."
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["remediator/tests", "backend/tests"]
