[project]
name = "accessibility-automator"
version = "0.1.0"
description = "Remediate faculty PPTX/PDF lecture files against WCAG for Canvas."
requires-python = ">=3.11"
dependencies = [
    # Document processing
    "python-pptx>=0.6.23",
    "pikepdf>=8",
    "pdf2image>=1.17",
    "pytesseract>=0.3.10",
    "Pillow>=10",
    # Config + HTTP
    "PyYAML>=6",
    "httpx>=0.27",
    # Web layer (FastAPI)
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    # Auth + database (Google SSO allowlist, JWT sessions)
    "authlib>=1.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=24",
    "ruff>=0.5",
    "reportlab>=4",          # builds PDF fixtures for the test suite
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# main.py calls load_dotenv() before the app imports so env vars are present
# when the module-level ``app = create_app()`` reads settings.
"backend/app/main.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["remediator/tests", "backend/tests"]
